--- a/Site_1/index.html
+++ b/Site_1/index.html
@@ -50,31 +50,32 @@
             <div class="col-12 bg-dark ">
             <ul class="nav head d-flex justify-content-center" >
                 <li class="nav-item ">
-                <a class="nav-link  text-white d-flex align-items-center " href="#">Active</a>
+                <a class="nav-link  text-white d-flex align-items-center " href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white d-flex align-items-center" href="#">Link</a>
+                    <a class="nav-link text-white d-flex align-items-center" href="#">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white d-flex align-items-center" href="#">Link</a>
+                    <a class="nav-link text-white d-flex align-items-center" href="#">About us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled text-white d-flex align-items-center" href="#">Disabled</a>
+                    <a class="nav-link text-white d-flex align-items-center" href="#">Contact</a>
                 </li>
             </ul>
                 </div>
             </div>
 
-       
-                <div class="row">
-                        <div class="col-6 text-center overflow-hidden">
-                                <div class="my-3 p-3">
-                                  <h2 class="display-5">Another headline</h2>
-                                  <p class="lead">And an even wittier subheading.</p>
+            
+                <div class="row my-5">
+                        <div class="col-6 text-center overflow-hidden no-gutters p-0 ">
+                                <div class="my-3">                                 
+                                  <div class="font-weight-bold text-left text-uppercase" style="font-size: 60px;">Our Strong Organaisation</div>
+                                  <div class="lead font-weight-light text-left">And an even wittier subheading.And an even wittier subheading.And an even wittier 
+                                      subheading.And an even wittier subheading.And an even wittier subheading.</div>
                                 </div>
-                                <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-                              </div>
-                        <div class="col-6 bg-secondary"><br> <br></div>
+                            <button class=" btn btn-danger float-left m-0 my-3">Contact us </button>    
+                            </div>
+                        <div class="col-6 bg-secondary text-left "><br> <br></div>
                 </div>
  
             </div>
